# mhguide-umr

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  release-please-config.json
.github/workflows/: ci.yml  release.yml
src/: fusions.rs  lib.rs  mhguide.rs
testfiles/: biomarkers-mhguide-report-narrative.json  biomarkers-mhguide.json  cnv-mhguide.json  rnafusion-mhguide.json  sv-mhguide-noreportnarrative.json  sv-mhguide.json  sv_del-mhguide.json
